Struggling to understand the schemas

--- a/custom_components/stib_mivb/manifest.json
+++ b/custom_components/stib_mivb/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "stib_mivb",
-  "name": "STIB/MIVB sensor",
+  "name": "STIB/MIVB helldog136",
   "documentation": "https://github.com/helldog136/ha-stib-mivb",
   "codeowners": ["@helldog136"],
   "requirements": ["pystibmivb==1.6.0"],
